DigicielFull/force-app/main/default/objects/gnx__SharePoint__c/gnx__SharePoint__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>SharePoint</label>
</CustomObject>