DigicielFull/force-app/main/default/objects/gnx__SharePoint__c/fields/gnx__Client_Id__c.field-meta.xml
<CustomField>
    <fullName>gnx__Client_Id__c</fullName>
    <inlineHelpText>Client Id of the sharepoint application that will be used to save the file in SharePoint</inlineHelpText>
    <label>Client Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>