DigicielFull/force-app/main/default/objects/gnx__SharePoint__c/fields/gnx__Default_path__c.field-meta.xml
<CustomField>
    <fullName>gnx__Default_path__c</fullName>
    <inlineHelpText>Path where the generated file will be stored on SharePoint, For Each Generation a custom destination can be added to this default path</inlineHelpText>
    <label>Default path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>