DigicielFull/force-app/main/default/objects/gnx__SharePoint__c/fields/gnx__Library__c.field-meta.xml
<CustomField>
    <fullName>gnx__Library__c</fullName>
    <description>Library to use to store documents, if empty, default library will be used</description>
    <inlineHelpText>Library to use to store documents, if empty, default library will be used</inlineHelpText>
    <label>Library</label>
    <length>255</length>
    <type>Text</type>
</CustomField>