DigicielFull/force-app/main/default/objects/gnx__SharePoint__c/fields/gnx__Site_Id__c.field-meta.xml
<CustomField>
    <fullName>gnx__Site_Id__c</fullName>
    <inlineHelpText>Sharepoint Site Id where the file will be stored, can be left empty if site Name is filled</inlineHelpText>
    <label>Site Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>