DigicielFull/force-app/main/default/objects/gnx__SharePoint__c/fields/gnx__Site_Name__c.field-meta.xml
<CustomField>
    <fullName>gnx__Site_Name__c</fullName>
    <inlineHelpText>Site Name where the file will be stored, can be left empty if Site Id is known and filled</inlineHelpText>
    <label>Site Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>